[gd_scene load_steps=11 format=3 uid="uid://p2m4srwak1gp"]

[ext_resource type="Texture2D" uid="uid://bdqnhdm08rhfd" path="res://crtktn c kerjv-Photoroom (1).png" id="1_o5dea"]
[ext_resource type="Script" uid="uid://cmipfd7c11kau" path="res://sceletluk.gd" id="1_vric6"]
[ext_resource type="Texture2D" uid="uid://bhispwgb16lnd" path="res://crtktn c kerjv-Photoroom.png" id="2_vric6"]
[ext_resource type="Texture2D" uid="uid://dq6v2nmpxbqne" path="res://скелетон-Photoroom (1).png" id="3_p5ngg"]
[ext_resource type="Texture2D" uid="uid://cmufblfq0csn1" path="res://скелетон-Photoroom (3).png" id="4_aemrk"]
[ext_resource type="Texture2D" uid="uid://bim2dnkh8e5h3" path="res://скелетон-Photoroom (2).png" id="5_8wkrx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_td4rb"]
radius = 41.0
height = 184.0

[sub_resource type="SpriteFrames" id="SpriteFrames_iy8rs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_o5dea")
}, {
"duration": 1.0,
"texture": ExtResource("2_vric6")
}],
"loop": true,
"name": &"ataka",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_p5ngg")
}, {
"duration": 1.0,
"texture": ExtResource("4_aemrk")
}],
"loop": true,
"name": &"deafult",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_p5ngg")
}, {
"duration": 1.0,
"texture": ExtResource("5_8wkrx")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbsmx"]
radius = 638.07837

[sub_resource type="CircleShape2D" id="CircleShape2D_uhse6"]
radius = 660.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_vric6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(14, 4)
shape = SubResource("CapsuleShape2D_td4rb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -2.0000014)
scale = Vector2(0.18419385, 0.24060392)
sprite_frames = SubResource("SpriteFrames_iy8rs")
animation = &"deafult"
autoplay = "deafult"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
position = Vector2(12, 7)
shape = SubResource("CircleShape2D_tbsmx")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
light_mask = 0
position = Vector2(11, 4)
shape = SubResource("CircleShape2D_uhse6")

[node name="Timer" type="Timer" parent="."]
wait_time = 59.043

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
